welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:1: error: Missing closing brace `}' assumed here
var nbpas = 0
^Program:14: error: ')' expected but '}' found.
}
^